--- a/.gitignore
+++ b/.gitignore
@@ -51,12 +51,14 @@ local.properties
 
 # Scala IDE specific (Scala & Java development for Eclipse)
 .cache-main
+.project
+
 .scala_dependencies
 .worksheet
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+.classpath
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
