--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ local.properties
 # Scala IDE specific (Scala & Java development for Eclipse)
 .cache-main
 .project
+src/stylesheets/*
 
 .scala_dependencies
 .worksheet
